tests/parse_print/random_perturb/set01/change-05/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/set01/change-05/change-05.essence Error is:
ValidatorError tests/parse_print/random_perturb/set01/change-05/change-05.essence:3:1:
  |
3 | finO x : set (size 2) of int(1..3)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens
